[HVHA-14] Revoke VC
- Update revocation list for VCs
